# service/internal/rest/handlers/artist/internal/change.go
@@ -10,7 +10,9 @@ import (
 	"github.com/sedonn/song-library-service/internal/services"
 )
 
+// ArtistChanger описывает поведение объекта слоя бизнес-логики, который обновляет данные исполнителей.
 type ArtistChanger interface {
+	// ChangeSong обновляет данные определенного исполнителя.
 	ChangeArtist(ctx context.Context, a models.Artist) (models.ArtistAPI, error)
 }
 
@@ -19,6 +21,19 @@ type changeArtistRequest struct {
 	models.ArtistOptionalAttributesAPI
 }
 
+// NewChangeArtistHandler возвращает новый объект хендлера, который обновляет данные исполнителей.
+//
+//	@Summary		Изменить данные исполнителя.
+//	@Description	Изменить данные исполнителя.
+//	@Tags			artist
+//	@Accept			json
+//	@Produce		json
+//	@Param			artist-id	path		models.ArtistIDAPI	true	"ID исполнителя"
+//	@Param			artist		body		changeArtistRequest	true	"Новые данные исполнителя"
+//	@Success		200			{object}	models.ArtistAPI
+//	@Failure		400			{object}	mwerror.ErrorResponse
+//	@Failure		500			{object}	mwerror.ErrorResponse
+//	@Router			/artists/{artist-id} [put]
 func NewChangeArtistHandler(ac ArtistChanger) gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		var req changeArtistRequest
